--- a/RESTAPI_CORE/appsettings.json
+++ b/RESTAPI_CORE/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "CadenaSQL": "Data Source=(local); Initial Catalog=PRUEBAS;Integrated Security=true"
+    "CadenaSQL": "Data Source=(local); Initial Catalog=master;Integrated Security=true"
   },
   "Logging": {
     "LogLevel": {
